@@ -1,6 +1,9 @@
 Changes from jTDS 1.2
 =====================
 
+12/19/2005 - Alin Sinpalean
+ o Minor optimization in determining the scale for decimal parameters.
+
 12/05/2005 - Alin Sinpalean
  o Applied Mike's fix for bug [1371295] executeBatch returns incorrect counts.
    Batch updates now always return an array of length equal to the batch size,
